# golem-wordle

./: Cargo.toml  Cranky.toml  README.md
app/: Cargo.toml
app/src/: main.rs
assets/: words.txt
lib/: Cargo.toml  rustfmt.toml
lib/src/: app_error.rs  app_state.rs  char_result.rs  clock.rs  core.rs  game_state.rs  lib.rs  session_state.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/wit/: wordle.wit
